way-displays 1.2.1 YYYY-MM-DD
-----------------------------
- Bug #12 handle rotated displays
- Bug #11 allow retries after config update during a change

way-displays 1.2.0 2022-01-07
-----------------------------
- Feature #10 Maximum Preferred Refresh

way-displays 1.1.0 2021-11-04
-----------------------------
- Feature #8 ARRANGE: ROW|COLUMN ALIGN: BOTTOM|MIDDLE|TOP|LEFT|RIGHT

way-displays 1.0.2 2021-10-20
-----------------------------
- Fix #3 Possibly Corrupted Configuation On Bad Read
- Fix #4 Ignore laptop lid closed / opened when no external displays connected
- Add time to logs and log threshold
- Print scale at 3dp

way-displays 1.0.1 2021-10-15
-----------------------------
- Fix #1 Hot Reload Not Working For symlinks
- Fix #2 Unable to open pid file from another user

way-displays 1.0.0 2021-10-13
-----------------------------
- Initial Release
