@@ -1,4 +1,8 @@
-way-displays 1.2.1 YYYY-MM-DD
+way-displays 1.3.0 2022-01-22
+-----------------------------
+- Feature #16 add DISABLED
+
+way-displays 1.2.1 2022-01-12
 -----------------------------
 - Bug #12 handle rotated displays
 - Bug #11 allow retries after config update during a change
